# ha-itach_ir

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  cli.py  client.py  hacs.json  itach.yaml  itach_ir.yaml  manifest.json  pyproject.toml  remote.py
custom_components/itach_ir/: client.py  manifest.json  remote.py
